# cpsc2710-demos-rev2

./: ToDo.org
Module01/: README.md
Module02/just-a-window/: README.md  main.py  pyproject.toml  with_layout.py  with_signals.py
Module02/pycalc-ai/: CLAUDE.md  README.md  pyproject.toml
Module02/pycalc-ai/src/pycalc/: calculator.py  dual_calculator.py
Module02/type-annotations-1/: README.md  bank_account_with_union.py  generic_stack_class.py  interest_with_types.py  old_generic_stack_class.py  pyproject.toml
Module02/vsc-demo/: README.md  pyproject.toml
Module02/vsc-demo/src/vsc_demo/: __init__.py
Module03/contacts/: load_sample_data.py  pyproject.toml
Module03/contacts-ai/: CLAUDE.md  contacts.db
Module03/contacts/src/contacts/: contact.py  contact_editor.py  contact_list.py  contacts_ui  contacts_ui.py
Module03/create-signals/: main.py  pyproject.toml
Module03/custom-dialogs/: pyproject.toml
Module03/custom-dialogs/src/dialogs/: non_modal.py  non_modal_with_tracking.py
Module03/jc-data-classes/: pyproject.toml
Module03/jc-data-classes/src/jc_data_classes/: dataclass_stock.py  default_bug.py  manual_stock.py
Module03/loan-with-signals/: pyproject.toml
Module03/loan-with-signals/src/loan_with_signals/: calculator.py  calculator_dialog.py  loan_calculator.py
Module03/pycalc-as-dialog/: pyproject.toml  style.qss
Module03/simple-list/: pyproject.toml
Module03/simple-list/src/simple_list/: simple_list_demo.py
Module03/simple-list/vscode-old/: settings.json
Module03/sizing/: pyproject.toml
Module03/sizing/src/pycalc/: calculator.py
Module03/sizing/src/sizing/: __init__.py  box_features.py  broken_form_layout.py  fixed_form_layout.py  layout_constraints.py  min_max.py  nested_layout_margins.py  nested_layout_propagation.py  size_conflicts.py  size_policy_grid.py  size_policy_interactive.py  stretch_factor.py
Module03/standard-dialogs/: QUICKSTART.md  README.md  pyproject.toml
Module03/standard-dialogs/src/app_vs_window/: demo.py
Module03/standard-dialogs/src/standard_dialogs/: __init__.py  modal_fontdialog_demo.py  modal_messagebox_demo.py  nonmodal_fontdialog_demo.py  nonmodal_messagebox_demo.py  simple_messagebox.py  standard_dialogs_showcase.py
Module03/threads/: pyproject.toml
Module03/threads/src/threads/: counter.py  progress_bar_basics.py  progress_bar_persistent_thread.py  progress_bar_slow_slot.py  progress_bar_transient_thread.py  slow_slot.py  two_tasks.py
Module03/windows/: pyproject.toml
Module04/contacts/: DATABASE_README.md  contacts.db  main.py  pyproject.toml
Module04/contacts-color-palette/: CLAUDE.md
Module04/contacts-color-palette/resources/: resources.qrc
Module04/contacts-color-palette/scripts/: compile_translations.bat
Module04/contacts-themes/: contacts.db  test_contact_db.py
Module04/contacts-themes/scripts/: update_translations.sh
Module04/contacts-translation/: contacts.db
Module04/contacts-translation/resources/: resources.qrc
Module04/contacts-translation/scripts/: compile_translations.sh
Module04/contacts-validation/docs/: contacts_database.md
Module04/contacts-validation/resources/: resources.qrc
Module04/contacts-validation/scripts/: compile_resources.sh  update_translations.sh
Module04/contacts/src/contacts/: contact.py  contacts_ui.py  repository.py  sample_data.py
Module04/icon-themes/: pyproject.toml
Module04/issue-tracker/: pyproject.toml
Module04/loan-with-qt-theme/: README.md  pyproject.toml
Module04/progress-bar/: pyproject.toml
Module04/progress-bar/src/progress_bar/: demo.py
Module04/pycalc-as-dialog/: pyproject.toml
Module04/pycalc-as-dialog/src/pycalc_as_dialog/: calculator.py  loan_calculator.py  loan_calculator_nonmodal.py
Module04/resources-demo/: compile-resources.bat  compile-resources.sh  pyproject.toml
Module04/resources-demo/resources/: resources.qrc
Module04/resources-demo/src/resources_demo/: pet_shop.py  resources_rc.py
Module04/skills/: CLAUDE.md
Module04/standard-pixmaps/: main.py  pyproject.toml
Module04/style-sheet/: pyproject.toml  run.sh
Module04/style-sheet/resources/: resources.qrc
Module04/style-sheet/resources/stylesheets/: style.qss
Module04/style-sheet/src/style_sheet/: demo.py  resources_rc.py
Module04/style-sheets/: README.md  pyproject.toml  styles.qss
Module04/style-sheets/src/style_sheets/: add_cat_dialog.py  cat_window.py
Module05/bank/: pyproject.toml
Module05/bank/src/bank/: bank_account.py
Module05/bank/tests/: comparing_doubles_test.py  math_tools_test.py
Module05/bank/tests/bank/: bank_account_test.py  new.py
Module05/cards/: pyproject.toml
Module05/cards/src/cards/: demo.py  playing_card.py
Module05/contacts/: contacts.db
Module05/contacts/resources/: resources.qrc
Module05/contacts/scripts/: update_translations.bat
Module05/slash-commands/: pyproject.toml
Module05/slash-commands/resources/: resources.qrc
Module05/slash-commands/tests/: test_issue_editor.py
Module05/type-annotations-1/: bank_account_no_union.py  interest_no_annotations.py  interest_with_type_inference.py  vector.py
Module06/bank-account-comparison/: BankAccount.java  bank_account.py  bank_demo.py
Module06/bank-inheritance/: README.md  pyproject.toml
Module06/bank-inheritance/tests/: test_accounts.py
Module06/cards-inheritance/: README.md  pyproject.toml
Module06/cards-inheritance/src/cards_inheritance/: __init__.py  cards.py  demo.py
Module06/cards-inheritance/tests/: test_cards.py
Module06/generators/: pyproject.toml
Module06/iterators/: pyproject.toml
Module06/tdd/: pyproject.toml  shopping_cart_description.txt
Module06/tdd/src/store/: shopping_cart.py
Module06/tdd/tests/store/: shopping_cart_test.py
Module07/bank-account-comparison/: BankDemo.java  foo.py  java_run.sh  python_run.sh
Module07/bank-inheritance/: pyproject.toml
Module07/contacts/: pyproject.toml
Module07/contacts/resources/: resources.qrc
Module07/contacts/scripts/: compile_translations.sh
Module07/mi/: pyproject.toml
Module07/mi/src/mi/: local_order_failure.py  missing_super.py  using_super.py
(+96 files in other folders)
