[project]
name = "dialogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "C. David Shaffer", email = "cdshaffer@acm.org" }
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.10.0",
]

[project.scripts]
dialogs = "dialogs:main"
non_modal = "dialogs.non_modal:main"
non_modal_with_tracking = "dialogs.non_modal_with_tracking:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
