[project]
name = "loan-with-signals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "C. David Shaffer", email = "cdshaffer@acm.org" }
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.10.2",
]

[project.scripts]
loan = "loan_with_signals.loan_calculator:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
