[project]
name = "sizing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "C. David Shaffer", email = "cdshaffer@acm.org" }
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.10.0",
]

[project.scripts]
min_max = "sizing.min_max:main"
broken_form_layout = "sizing.broken_form_layout:main"
fixed_form_layout = "sizing.fixed_form_layout:main"
layout_constraints = "sizing.layout_constraints:main"
box_features = "sizing.box_features:main"
pycalc = "pycalc.calculator:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
