[project]
name = "contacts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "C. David Shaffer", email = "cdshaffer@acm.org" }
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.10.1",
    "pyside6-stubs>=6.7.3.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
contacts = "contacts.contacts_ui:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
