[project]
name = "pycalc-as-dialog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "C. David Shaffer", email = "cdshaffer@acm.org" }
]
requires-python = "=3.13"
dependencies = [
    "pip>=25.3",
    "pyside6>=6.10.1",
]

[project.scripts]
pycalc = "pycalc_as_dialog.calculator:main"
loan = "pycalc_as_dialog.loan_calculator:main"
loan-nonmodal = "pycalc_as_dialog.loan_calculator_nonmodal:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
