[project]
name = "resources-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "C. David Shaffer", email = "cdshaffer@acm.org" }
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.10.2",
]

[project.scripts]
resources-demo = "resources_demo.pet_shop:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
