[project]
name = "cards-inheritance"
version = "0.1.0"
description = "Inheritance examples based on the Module05 playing card demo"
readme = "README.md"
authors = [
    { name = "C. David Shaffer", email = "cdshaffer@acm.org" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
cards-inheritance = "cards_inheritance.demo:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.mypy]
mypy_path = "src"
