[project]
name = "mi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "C. David Shaffer", email = "cdshaffer@acm.org" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
mi = "mi:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
